<resources>
    <string name="app_name">Just</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="Minus">-</string>
    <string name="Zero">0</string>
    <string name="price">price</string>
    <string name="Zero1">$0</string>
    <string name="order">order</string>
    <string name="Thx">Thank you</string>
    <string name="total">Total :</string>
</resources>
