<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Toppings"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:text="Whipped Cream"
        android:id="@+id/topping_checkbox"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/quantity"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/plus"
            android:layout_marginBottom="16dp"
            android:onClick="increment"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zero" />
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="@string/Minus"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:onClick="decrement"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Summary"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"


        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        />



</LinearLayout>